<resources>
    <string name="app_name">hw</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_dot">.</string>
    <string name="_divide">/</string>
    <string name="_multiply">*</string>
    <string name="_subtract">-</string>
    <string name="_add">+</string>
    <string name="_clear">C</string>
    <string name="_equal">=</string>
    <string name="TextView_0">0</string>
    <string name="material_light">Material light</string>
    <string name="material_dark">Material dark</string>
    <string name="btn_settings">Настройки темы</string>
    <string name="text_settings">Настройки темы</string>
    <string name="button_back">Назад</string>
</resources>