<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical"
    android:background="@color/black">
    <TextView
        android:id="@+id/text_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_settings"
        android:textSize="@dimen/text_settings"/>

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonAppThemeLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material_light"
            android:textColor="@color/white" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMyDarkTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material_dark"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_back" />
    </RadioGroup>

</LinearLayout>